@@ -25,7 +25,6 @@ import org.junit.jupiter.api.Timeout;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
@@ -87,7 +86,7 @@ public class LinuxIoMetricsCollectorTest {
                          "read_bytes: " + readBytes + "\n" +
                          "write_bytes: " + writeBytes + "\n" +
                          "cancelled_write_bytes: 0\n";
-            Files.write(selfDir.resolve("io"), bld.getBytes(StandardCharsets.UTF_8));
+            Files.writeString(selfDir.resolve("io"), bld);
         }
     }
 }
